styles/main.css
html{
  background-image: url("../images/snowbg.avif");
  background-repeat: no-repeat;
  background-color:  rgb(143,170,190);
  background-size: cover;
}
body{
  margin: 0;
  width: 100vw;
  margin: auto;
  font-family: 'Source Sans Pro', sans-serif;
}
header{
  background-color: rgb(77, 105, 124);
  height: 20vh;
  text-align: center;
  padding-top: 10vh;
  font-size: 5.5em;
  color: RGB(235,246,247);
  width: 80vw;
  margin: auto;
  border-radius: 10px;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}
#home-icon{
  position: absolute;
  top: 1.5vh;
  left: 11vw;
}
.h1-welcome{
  text-align: center;
}
h1, ul {
  margin-block: 0;
}
.h1-blog {
  text-align: center;
  padding-bottom: 1vh;
}
.blog-cont p, .blog-cont h2{
  padding: 0 2vw 2vw 2vw;
}
.blog-cont h1{
  text-align: center;
}
h1{
  padding: 0.67em 0.33em 0 0.33em;
}
.list-welcome{
  padding: 1vh 2vw;
}
.list-horizontal li{
  display: inline-block;
  padding: 5vw;
}
.nav-cont{
  background-color: rgb(235,246,247,.85);
  border-radius: 25px;
  box-shadow: 10px 10px 9px -5px;
}
.blog-cont{
  background-color: rgb(235,246,247,.85);
  width: 80vw;
  margin: auto;
  border-radius: 10px;
  box-shadow: 10px 10px 9px -5px;
}
.list-nav{
  list-style-type: none;
  height: 100%;
  text-decoration: none !important;
}
.noDecoration, a:link, a:visited {
  text-decoration: none;
}
.article-nav {
  border-bottom: 1px solid black;
  padding-bottom: 1.5vh;
  font-weight: 600;
}
.article-nav li{
  padding-bottom: 1.5vh;
  padding-top: 1.5vh;
}
.view-more {
  padding-bottom: 0vh;
  border-bottom: 2px solid darkgray;
  color: rgb(65, 65, 65);
  font-weight: 800;
}
.grid {
  display: grid;
  width: 80vw;
  grid-template-columns: 2fr 2fr;
  height: 70vh;
  margin: auto;
}

.grid-welcome{
  background-image: linear-gradient(rgb(208, 188, 104, .85), rgb(143,170,190));
  background-color: rgb(208, 188, 104, .85);
  color: darkslategrey;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-radius: 10px;
}
.welcome-padder{
  padding-left: 10px;
}
.foot {
  display: grid;
  width: 100%;
  grid-template-columns: repeat(3, 1fr);
  grid-auto-rows: 6.67vh;
  grid-auto-columns: 26.67vw;
  margin-top: 20vh;
}
.foot-1 {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 4;
}
.foot-2 {
grid-column-start: 2;
grid-column-end: 3;
grid-row-start: 2;
grid-row-end: 4;
overflow: auto;
}
.foot-3{
grid-column-start: 3;
grid-row-start: 2;
grid-row-end: 3;
display: flex;
align-items: center;
justify-content: center;
}
.btn-dis{
  background-color: #008CBA;
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
}
footer{
  background-image: linear-gradient(to right, rgba(174,129,83,1), rgba(235,246,247,0.60));
  position: relative;
  vertical-align: bottom;
  width: 80vw;
 margin: auto;
 border-radius: 10px;
 font-family: 'Raleway', sans-serif;
}
.galaxy-brain {
  width: 25vw;
  display: block;
  height: 100%;
  object-fit: cover;
  border-radius: 10px;
}
#code {
  margin: auto;
  display: block;
}
.index{
  text-decoration: none;
}
.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip-text {
  visibility: hidden;
  width: 16vw;
  background-color: #008CBA;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 0.5vw 1vw;
  position: absolute;
  z-index: 1;
  bottom: 115%;
  left: 20%;
  margin-left: -6.5vw;
}
.tooltip:hover .tooltip-text {
  visibility: visible;
}
.tooltip-text::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #008CBA transparent transparent transparent;
}

@media (min-width: 1200px){
  .galaxy-brain{
    content: url(../images/galaxy-brain.png); /*Need to replace alt text with Javascript*/
  }
}

@media (max-width: 768px){
  .foot-2{
    grid-row-start: 1;
  }
  .tooltip-text{
    padding: 0.5vw 10vw 0.5vw 4vw;
    left: 25%;
    width: 20vw;
  }
  .list-welcome{
    padding: .75vh 4vw
  }
  header{
    font-size: 4em;
  }
  body {
    width: 100%;
  }
  .grid {
    grid-template-columns: 1fr;
  }
  .grid-welcome{
    margin-top: 2.5vh;
  }
  .nav-cont{
    margin-top: 2.5vh;
  }
  .foot{
    margin-top: 2.5vh;
  }
}

@media (max-width: 320px){
  .tooltip-text{
    width: 30vw;
  }
  header{
    height: 15vh;
    padding-top: 7.5vh;
    font-size: 3em;
    width: 90%;
  }

  .grid-welcome{
    margin-top: 5vh;
    min-height: 50vh;
    overflow: auto;
  }
  .nav-cont{
    margin-top: 5vh;
    min-height: 30vh;
  }
  .foot{
    margin-top: 25vh;
  }
  .grid, footer{
    width: 90%;
  }
}

